<resources>
    <string name="app_name">exerxice fix</string>
    <string name="temail">Email</string>
    <string name="btsignin">Sign-in</string>
    <string name="tPwd">Password</string>
    <string name="btnmnu">Belum Terdaftar ?</string>
    <string name="datakontak">Data Kontak</string>
    <string name="nameitem">Nama Item</string>
    <string name="viewdata">view Data</string>
    <string name="viewnomer">view Nomor</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="Search">Search</string>
    <string name="nama">Nama lengkap</string>
    <string name="notel">No. Telepon</string>
    <string name="menu">Daftar</string>
    <string name="Jeniskelamin">Jenis Kelamin</string>
    <string name="Agama">Agama</string>
    <string name="Email">Email</string>
    <string name="Alamat">Alamat</string>
    <string name="repass">Re-Password</string>
    <string name="lakilaki">Laki - Laki</string>
    <string name="prempuan">Perempuan</string>
    <string name="batal">Batal</string>
    <string name="Register">Daftar</string>
    <string-array name="DataKontak">
        <item>Ana</item>
        <item>Ani</item>
        <item>Anu</item>
        <item>Ane</item>
        <item>Ano</item>
    </string-array>

</resources>