<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#F4DC02"
    tools:context=".mainmenu">

    <TextView
        android:id="@+id/tvregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />


    <EditText
        android:id="@+id/Rusr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/nama"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvregis"
        app:layout_constraintVertical_bias="0.072" />
    <EditText
        android:id="@+id/Remail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rusr"
        app:layout_constraintVertical_bias="0.048" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="140dp"
        android:layout_height="27dp"
        android:ems="10"
        android:text="@string/Jeniskelamin"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Remail"
        app:layout_constraintVertical_bias="0.062" />
    <CheckBox
        android:id="@+id/cekpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prempuan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/Remail"
        app:layout_constraintVertical_bias="0.05" />
    <CheckBox
        android:id="@+id/ceklk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lakilaki"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/cekpr"
        app:layout_constraintTop_toBottomOf="@+id/Remail"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/ckagama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Agama"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.078" />
    <CheckBox
        android:id="@+id/chkislam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Islam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/ckagama"
        app:layout_constraintTop_toBottomOf="@+id/cekpr"
        app:layout_constraintVertical_bias="0.053" />

    <CheckBox
        android:id="@+id/ckkristen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kristen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toEndOf="@+id/ckagama"
        app:layout_constraintTop_toBottomOf="@+id/chkislam"
        app:layout_constraintVertical_bias="0.044" />
    <CheckBox
        android:id="@+id/ckbudha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Budha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toEndOf="@+id/chkislam"
        app:layout_constraintTop_toBottomOf="@+id/cekpr"
        app:layout_constraintVertical_bias="0.054" />
    <CheckBox
        android:id="@+id/chkshindu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="Hindu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toEndOf="@+id/ckkristen"
        app:layout_constraintTop_toBottomOf="@+id/ckbudha"
        app:layout_constraintVertical_bias="0.015" />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Alamat"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckkristen"
        app:layout_constraintVertical_bias="0.077" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="305dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#ffffff"
        android:backgroundTint="#0003DFFB"
        android:ems="10"
        android:hint="@string/tPwd"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <EditText
        android:id="@+id/pass1"
        android:layout_width="305dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#ffffff"
        android:backgroundTint="#0003DFFB"
        android:ems="10"
        android:hint="@string/repass"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <Button
        android:id="@+id/btnbatal"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:text="@string/batal"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/btnregis"
        android:layout_width="197dp"
        android:layout_height="52dp"
        android:text="@string/Register"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toEndOf="@+id/btnbatal"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.563" />






</androidx.constraintlayout.widget.ConstraintLayout>